# Googletests

./: CMakeLists.txt
src/: CMakeLists.txt  abstractvehicle.cpp  abstractvehicle.h  abstrasctvehicle.cpp  abstrasctvehicle.h  car.cpp  car.h  deliverycompany.cpp  deliverycompany.h  ivehicle.cpp  ivehicle.h  main.cpp  plane.cpp  plane.h  ship.cpp  ship.h
tests/: CMakeLists.txt  deliverycompanytest.cpp  ivehicletest.cpp  tests_main.cpp
